FiFixed issues #43 and #46; a z-index issue with the context menu and an issue caused by not handling if the current file is being deleted indirectly (ie. deleted parent folder)

--- a/public/contextmenu/src/jquery.contextMenu.css
+++ b/public/contextmenu/src/jquery.contextMenu.css
@@ -48,6 +48,9 @@
             user-select: none;
 }
 
+.context-menu-root{
+    z-index: 100 !important;
+}
 .context-menu-separator {
     padding-bottom:0;
     border-bottom: 1px solid rgb(25,25,25);
@@ -82,7 +85,7 @@
     position: absolute;
     top: 0;
     right: 3px;
-    z-index: 1;
+    z-index: 10;
 }
 
 /* icons
